--- a/Mapping_Multiple_Points/index.html
+++ b/Mapping_Multiple_Points/index.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Leaflet Basic Map</title>
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
-        integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
-        crossorigin=""/>
-
-    <!-- style.CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-
-</head>
+    <title>Multiple Points Map</title>
 
 
-<body>
-
-    <!-- Leaflet map -->
-    <div id="mapid"></div>
-
-
-    <!-- Leaflet JavaScript. Add this at the end -->
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
-    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
-    crossorigin=""></script>
-
-
-    <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
     <!-- d3 JavaScript -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+</head>
+
+<body>
+
+    <!-- The div that holds our map -->
+    <div id="mapid"></div>
+
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+
+    <!-- API key -->
+    <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/cities.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
-
+        
 </body>
 </html>
